fix(scroll-behaviors): Resolve cross-browser and platform scrolling behaviors Add Event for closing the navbar on menu change Add proper CSS overflow options for specific browsers Update aurelia-interface-platforms

--- a/src/app.scss
+++ b/src/app.scss
@@ -39,10 +39,17 @@
 html, body {
   overflow: hidden;
   height: 100vh;
+  height: 100%;
   width: 100vw;
+  width: 100%;
+  max-height: 100vh;
+  max-height: 100%;
+  max-width: 100vw;
+  max-width: 100%;
   margin: 0;
   padding: 0;
-
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
   -webkit-transform: translate3d(0,0,0);
      -moz-transform: translate3d(0,0,0);
       -ms-transform: translate3d(0,0,0);
